# ackinacki-kit

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  release.yml  version-check.yml
ana_contracts/: Cargo.toml
ana_contracts/src/mvsystem/: boost.rs  mirror.rs  mod.rs  mvmultifactor.rs
contracts/: Cargo.toml
contracts/abi/accumulator/: ShellAccumulatorRootUSDC.abi.json
contracts/abi/authservice/: AuthProfile.abi.json  AuthServiceRoot.abi.json
contracts/abi/bksystem/: ReputationCoefficientCalculator.abi.json  ReputationCoefficientCalculator.sol  ReputationCoefficientCalculator.tvc
contracts/abi/dex/: Oracle.abi.json  OracleEventList.abi.json  OrderBook.abi.json  PMP.abi.json  PrivateNote.abi.json  RootPN.abi.json
contracts/abi/exchange/: DepositVoucher.abi.json  Exchange.abi.json  USDCBridge.abi.json
contracts/abi/giver/: GiverV3.abi.json
contracts/abi/multisig/: Multisig.abi.json  Multisig.tvc
contracts/abi/mvsystem/: Boost.abi.json  Miner.abi.json  Mirror.abi.json  MobileVerifiersContractGameRoot.abi.json  Mvmultifactor.abi.json  PopCoinRoot.abi.json  PopCoinWallet.abi.json  PopitGame.abi.json
contracts/abi/token/: TokenWallet.abi.json  Transaction.abi.json
contracts/src/: account.rs  dapp.rs  deserialize.rs  error.rs  event.rs  lib.rs  traits.rs
contracts/src/accumulator/: events.rs  mod.rs  shell_accumulator_root_usdc.rs  shell_sell_order_lot.rs
contracts/src/authservice/: events.rs  mod.rs  profile.rs  root.rs
contracts/src/bksystem/: bk_wallet.rs  bm_wallet.rs  mod.rs  reputation.rs
contracts/src/dex/: mod.rs  nullifier.rs  oracle.rs  oracle_event_list.rs  oracle_event_list_events.rs  oracle_events.rs  order_book.rs  order_book_events.rs  pmp.rs  pmp_events.rs  private_note.rs  private_note_events.rs  root_oracle.rs  root_oracle_events.rs  root_pn.rs  root_pn_events.rs  tests.rs
contracts/src/exchange/: deposit_voucher.rs  events.rs  exchange.rs  exchange_contract.rs  mod.rs  token_bridge.rs  token_bridge_events.rs  usdc_bridge.rs  usdc_bridge_events.rs
contracts/src/giver/: mod.rs  v3.rs
contracts/src/multisig/: mod.rs
contracts/src/mvconfig/: config.rs
contracts/src/mvsystem/: boost.rs  game_root.rs  indexer.rs  miner.rs  mirror.rs  mobile_verifiers_root.rs  mod.rs  multifactor.rs  mvmultifactor.rs  popcoin_root.rs  popcoin_wallet.rs  popitgame.rs  root.rs
contracts/src/mvsystem/game_root/: contract.rs  events.rs  mod.rs
contracts/src/mvsystem/miner/: contract.rs  events.rs  mod.rs
contracts/src/token/: mod.rs  root.rs  transaction.rs  wallet.rs
root/: Cargo.toml
root/src/: lib.rs
shared/: Cargo.toml
shared/src/: utils.rs
shared/src/traits/: guarded.rs
