
[workspace]
resolver = "3"
members = ["contracts", "root", "shared"]

package.version = "1.0.0"
package.edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22.1"
chrono = "0.4"
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", default-features = false }
tracing = "0.1"
tvm_block = { git = "https://github.com/tvmlabs/tvm-sdk.git", tag = "v3.0.0-rc.an", default-features = false }
tvm_client = { git = "https://github.com/tvmlabs/tvm-sdk.git", tag = "v3.0.0-rc.an", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
