
[workspace]
resolver = "3"
members = ["contracts", "root", "shared"]

package.version = "2.0.0"
package.edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22.1"
chrono = "0.4"
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
# Pin transitive `time` below 0.3.48: that release breaks `cookie 0.18.1`
# (pulled via tvm_client -> reqwest) with an E0119 coherence conflict.
# Cargo.lock is gitignored, so CI re-resolves to the latest unless we cap it here.
time = "=0.3.47"
tokio = { version = "1", default-features = false }
tracing = "0.1"
# TEMP — pinned to the tvm_abi off-by-32 multi-cell decode fix branch (PR pending).
# Revert to the git+tag lines below once the fix is merged and tvm-sdk is re-tagged:
#   tvm_block  = { git = "https://github.com/tvmlabs/tvm-sdk.git", tag = "v3.0.0.an", default-features = false }
#   tvm_client = { git = "https://github.com/tvmlabs/tvm-sdk.git", tag = "v3.0.0.an", default-features = false }
tvm_block = { git = "https://github.com/tvmlabs/tvm-sdk.git", branch = "fix/abi-multicell-decode-off-by-32", default-features = false }
tvm_client = { git = "https://github.com/tvmlabs/tvm-sdk.git", branch = "fix/abi-multicell-decode-off-by-32", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
