
[workspace]
resolver = "3"
members = ["contracts", "root", "shared"]

package.version = "2.1.0"
package.edition = "2024"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22.1"
chrono = "0.4"
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
# Pin transitive `time` below 0.3.48: that release breaks `cookie 0.18.1`
# (pulled via tvm_client -> reqwest) with an E0119 coherence conflict.
# Cargo.lock is gitignored, so CI re-resolves to the latest unless we cap it here.
time = "=0.3.47"
tokio = { version = "1", default-features = false }
tracing = "0.1"
# v3.0.2.an carries the tvm_abi off-by-32 multi-cell decode fix. NOTE: v3.0.0.an,
# v3.0.1.an and v3.0.0-rc.an do NOT have it (OrderPlaced fails to decode, error 304).
tvm_block = { git = "https://github.com/tvmlabs/tvm-sdk.git", tag = "v3.0.2.an", default-features = false }
tvm_client = { git = "https://github.com/tvmlabs/tvm-sdk.git", tag = "v3.0.2.an", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
