
[package]
name = "contracts"
version.workspace = true
edition.workspace = true

[features]
default = ["tokio/full", "tvm_client/default", "shared/default"]
wasm = ["dep:gloo-timers", "tokio/sync", "tvm_client/wasm_web", "shared/wasm"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
gloo-timers = { optional = true, version = "0.3", features = ["futures"] }
hex.workspace = true
num-bigint.workspace = true
num-traits = "0.2.19"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true

tvm_block.workspace = true
tvm_client = { workspace = true, optional = true }

shared = { path = "../shared", optional = true, default-features = false }
