
[package]
name = "contracts"
version.workspace = true
edition.workspace = true

[features]
default = ["tokio/full", "tvm_client/default", "shared/default"]
wasm = ["tokio/sync", "tvm_client/wasm_web", "shared/wasm"]

[dependencies]
base64.workspace = true
chrono.workspace = true
hex.workspace = true
num-bigint.workspace = true
num-traits = "0.2.19"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, optional = true }
tracing.workspace = true

tvm_block.workspace = true
tvm_client = { workspace = true, optional = true }
# Not used directly — present only to pin transitive `time` < 0.3.48 (see workspace Cargo.toml).
time = { workspace = true }

shared = { path = "../shared", optional = true, default-features = false }
