
[package]
name = "ackinacki-kit"
version.workspace = true
edition.workspace = true

[features]
contracts = ["dep:contracts"]
default = ["tvm_client/default", "shared/default", "contracts?/default"]
wasm = ["tvm_client/wasm_web", "shared/wasm", "contracts?/wasm"]

[dependencies]
tvm_client = { workspace = true, optional = true }

contracts = { path = "../contracts", optional = true, default-features = false }
shared = { path = "../shared", optional = true, default-features = false }
